--- a/common-s3/pom.xml
+++ b/common-s3/pom.xml
@@ -11,9 +11,9 @@
     </parent>
 
     <groupId>com.kw</groupId>
-    <artifactId>spring-boot--kotlin-common-s3</artifactId>
+    <artifactId>spring-boot-kotlin--common-s3</artifactId>
     <version>0.0.3-SNAPSHOT</version>
-    <name>spring-boot--kotlin-common-s3</name>
+    <name>spring-boot-kotlin--common-s3</name>
     <description>Starter S3 Library</description>
 
     <properties>
@@ -23,15 +23,15 @@
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <aws-java-sdk-s3.version>1.12.67</aws-java-sdk-s3.version>
 
-        <starter-common.version>1.2.0-SNAPSHOT</starter-common.version>
+        <common-starter.version>1.2.0-SNAPSHOT</common-starter.version>
     </properties>
 
     <dependencies>
         <!-- COMMON LIBRARY -->
         <dependency>
             <groupId>com.kw</groupId>
-            <artifactId>starter-common</artifactId>
-            <version>${starter-common.version}</version>
+            <artifactId>spring-boot-kotlin--common-starter</artifactId>
+            <version>${common-starter.version}</version>
             <scope>provided</scope>
         </dependency>
 
