--- a/common-mail/pom.xml
+++ b/common-mail/pom.xml
@@ -13,25 +13,25 @@
     </parent>
 
     <groupId>com.kw</groupId>
-    <artifactId>spring-boot--kotlin-common-mailable</artifactId>
+    <artifactId>spring-boot-kotlin--common-mail</artifactId>
     <version>1.1.2-SNAPSHOT</version>
-    <name>spring-boot--kotlin-common-mailable</name>
-    <description>Starter Mailable Library</description>
+    <name>spring-boot-kotlin--common-mail</name>
+    <description>Common Mail Library</description>
 
     <properties>
         <kotlin.version>1.6.10</kotlin.version>
         <ktlint-maven-plugin.version>1.12.1</ktlint-maven-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
 
-        <starter-common.version>1.2.0-SNAPSHOT</starter-common.version>
+        <common-starter.version>1.2.0-SNAPSHOT</common-starter.version>
     </properties>
 
     <dependencies>
         <!-- COMMON LIBRARY -->
         <dependency>
             <groupId>com.kw</groupId>
-            <artifactId>starter-common</artifactId>
-            <version>${starter-common.version}</version>
+            <artifactId>spring-boot-kotlin--common-starter</artifactId>
+            <version>${common-starter.version}</version>
             <scope>provided</scope>
         </dependency>
 
