--- a/common-sftp/pom.xml
+++ b/common-sftp/pom.xml
@@ -13,9 +13,9 @@
     </parent>
 
     <groupId>com.kw</groupId>
-    <artifactId>spring-boot--kotlin-common-sftp</artifactId>
+    <artifactId>spring-boot-kotlin--common-sftp</artifactId>
     <version>0.0.3-SNAPSHOT</version>
-    <name>spring-boot--kotlin-common-sftp</name>
+    <name>spring-boot-kotlin--common-sftp</name>
     <description>Starter SFTP Library</description>
 
     <properties>
@@ -25,15 +25,15 @@
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <jsch.version>0.1.55</jsch.version>
 
-        <starter-common.version>1.2.0-SNAPSHOT</starter-common.version>
+        <common-starter.version>1.2.0-SNAPSHOT</common-starter.version>
     </properties>
 
     <dependencies>
         <!-- COMMON LIBRARY -->
         <dependency>
             <groupId>com.kw</groupId>
-            <artifactId>starter-common</artifactId>
-            <version>${starter-common.version}</version>
+            <artifactId>spring-boot-kotlin--common-starter</artifactId>
+            <version>${common-starter.version}</version>
             <scope>provided</scope>
         </dependency>
 
