--- a/common-starter/pom.xml
+++ b/common-starter/pom.xml
@@ -13,10 +13,10 @@
 	</parent>
 
 	<groupId>com.kw</groupId>
-	<artifactId>spring-boot--kotlin-common</artifactId>
+	<artifactId>spring-boot-kotlin--common-starter</artifactId>
 	<version>1.2.0-SNAPSHOT</version>
-	<name>spring-boot--kotlin-common</name>
-	<description>Starter Common Library</description>
+	<name>spring-boot-kotlin--commo-startern</name>
+	<description>Common Starter Library</description>
 
 	<properties>
 		<java.version>11</java.version>
