--- a/common-starter/pom.xml
+++ b/common-starter/pom.xml
@@ -8,37 +8,38 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.4</version>
+		<version>3.2.0</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>com.kw</groupId>
 	<artifactId>spring-boot-kotlin--common-starter</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
-	<name>spring-boot-kotlin--commo-startern</name>
+	<version>3.0.0-SNAPSHOT</version>
+	<name>spring-boot-kotlin--common-starter</name>
 	<description>Common Starter Library</description>
 
 	<properties>
-		<java.version>11</java.version>
-		<kotlin.version>1.6.10</kotlin.version>
-		<ktlint-maven-plugin.version>1.12.1</ktlint-maven-plugin.version>
-		<httpclient.version>4.5.13</httpclient.version>
-		<jackson-module-kotlin.version>2.13.2</jackson-module-kotlin.version>
-		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+		<java.version>17</java.version>
+		<kotlinx-coroutines.version>1.7.3</kotlinx-coroutines.version>
+		<ktlint-maven-plugin.version>3.0.0</ktlint-maven-plugin.version>
+		<jackson-module-kotlin.version>2.16.0</jackson-module-kotlin.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
 		<!-- HTTP CLIENT -->
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>${httpclient.version}</version>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>${httpclient5.version}</version>
 		</dependency>
 
 		<!-- JACKSON -->
@@ -53,30 +54,31 @@
 			<version>${jackson-module-kotlin.version}</version>
 		</dependency>
 
-		<!-- KOTLIN -->
+		<!-- COROUTINE -->
 		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-reflect</artifactId>
-			<version>${kotlin.version}</version>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib-jdk8</artifactId>
-			<version>${kotlin.version}</version>
-		</dependency>
-
-		<!-- APACHE -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.12.0</version>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-slf4j</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
 		</dependency>
 
-		<!-- MONITORING & HEALTH CHECK -->
+		<!-- LOGBACK -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.4.14</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.4.14</version>
+		</dependency>
+
+		<!-- MONITORING -->
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
