--- a/common-s3/pom.xml
+++ b/common-s3/pom.xml
@@ -11,9 +11,9 @@
     </parent>
 
     <groupId>com.kw</groupId>
-    <artifactId>spring-boot-kotlin--common-s3</artifactId>
+    <artifactId>kotlin.spring-boot--common-s3</artifactId>
     <version>0.0.3-SNAPSHOT</version>
-    <name>spring-boot-kotlin--common-s3</name>
+    <name>common-s3</name>
     <description>Starter S3 Library</description>
 
     <properties>
@@ -30,7 +30,7 @@
         <!-- COMMON LIBRARY -->
         <dependency>
             <groupId>com.kw</groupId>
-            <artifactId>spring-boot-kotlin--common</artifactId>
+            <artifactId>kotlin.spring-boot--common</artifactId>
             <version>${common-starter.version}</version>
             <scope>provided</scope>
         </dependency>
