--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,21 +8,22 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0</version>
+		<version>3.3.1</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>com.kw</groupId>
-	<artifactId>spring-boot-kotlin--common</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
-	<name>spring-boot-kotlin--common-starter</name>
-	<description>Common Starter Library</description>
+	<artifactId>kotlin.spring-boot--common</artifactId>
+	<version>3x-SNAPSHOT</version>
+	<name>common</name>
+	<description>Common library for kotlin(+Java) spring boot</description>
 
 	<properties>
 		<java.version>17</java.version>
-		<kotlinx-coroutines.version>1.7.3</kotlinx-coroutines.version>
-		<ktlint-maven-plugin.version>3.0.0</ktlint-maven-plugin.version>
-		<jackson-module-kotlin.version>2.16.0</jackson-module-kotlin.version>
+		<kotlinx-coroutines.version>1.8.1</kotlinx-coroutines.version>
+		<ktlint-maven-plugin.version>3.2.0</ktlint-maven-plugin.version>
+		<jackson-module-kotlin.version>2.17.2</jackson-module-kotlin.version>
+		<logback.version>1.5.6</logback.version>
 	</properties>
 
 	<dependencies>
@@ -70,12 +71,12 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.4.14</version>
+			<version>${logback.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.4.14</version>
+			<version>${logback.version}</version>
 		</dependency>
 
 		<!-- MONITORING -->
@@ -136,18 +137,18 @@
 <!--	<repositories>-->
 <!--		<repository>-->
 <!--			<id>maven-public</id>-->
-<!--			<url>...</url>-->
+<!--			<url>http://nexus...</url>-->
 <!--		</repository>-->
 <!--	</repositories>-->
 
 <!--	<distributionManagement>-->
 <!--		<snapshotRepository>-->
 <!--			<id>nexus-snapshots</id>-->
-<!--			<url>.../snapshots/</url>-->
+<!--			<url>http://nexus.../snapshots/</url>-->
 <!--		</snapshotRepository>-->
 <!--		<repository>-->
 <!--			<id>nexus-releases</id>-->
-<!--			<url>.../releases/</url>-->
+<!--			<url>http://nexus.../releases/</url>-->
 <!--		</repository>-->
 <!--	</distributionManagement>-->
 
