--- a/common-mail/pom.xml
+++ b/common-mail/pom.xml
@@ -8,14 +8,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
+        <version>3.3.1</version>
         <relativePath/>
     </parent>
 
     <groupId>com.kw</groupId>
-    <artifactId>spring-boot-kotlin--common-mail</artifactId>
+    <artifactId>kotlin-spring-boot--starter-common-mail</artifactId>
     <version>1.1.2-SNAPSHOT</version>
-    <name>spring-boot-kotlin--common-mail</name>
+    <name>common-mail</name>
     <description>Common Mail Library</description>
 
     <properties>
@@ -30,7 +30,7 @@
         <!-- COMMON LIBRARY -->
         <dependency>
             <groupId>com.kw</groupId>
-            <artifactId>spring-boot-kotlin--common-starter</artifactId>
+            <artifactId>kotlin-spring-boot--starter-common</artifactId>
             <version>${common-starter.version}</version>
             <scope>provided</scope>
         </dependency>
