--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kw</groupId>
-    <artifactId>spring-boot-kotlin--common-library</artifactId>
+    <artifactId>kotlin-spring-boot--starter-libraries</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>common-starter</module>
+        <module>common</module>
         <module>common-mail</module>
         <module>common-s3</module>
         <module>common-sftp</module>
