polish common mailing lib

--- a/common-mailing/src/main/resources/application.yml
+++ b/common-mailing/src/main/resources/application.yml
@@ -16,7 +16,6 @@
 #      body-template: 'body-template.html'
 #
 #api:
-#  notification:
-#    base-url: https://notification.service.io/notification
+#  mailing:
 #    endpoints:
-#      send-email: ${api.notification.base-url}/api/v2/email
+#      send-email: https://notification.service.io/api/v2/email
