--- a/common-mailing/pom.xml
+++ b/common-mailing/pom.xml
@@ -13,17 +13,16 @@
     </parent>
 
     <groupId>com.kw</groupId>
-    <artifactId>kotlin-spring-boot--starter-common-mail</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
-    <name>common-mail</name>
-    <description>Common Mail Library</description>
+    <artifactId>kotlin-spring-boot--starter-common-mailing</artifactId>
+    <version>3x-SNAPSHOT</version>
+    <name>common-mailing</name>
+    <description>Common library for mailing api</description>
 
     <properties>
-        <kotlin.version>1.6.10</kotlin.version>
-        <ktlint-maven-plugin.version>1.12.1</ktlint-maven-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+        <java.version>17</java.version>
+        <ktlint-maven-plugin.version>3.2.0</ktlint-maven-plugin.version>
 
-        <common-starter.version>1.2.0-SNAPSHOT</common-starter.version>
+        <starter-common.version>3x-SNAPSHOT</starter-common.version>
     </properties>
 
     <dependencies>
@@ -31,13 +30,7 @@
         <dependency>
             <groupId>com.kw</groupId>
             <artifactId>kotlin-spring-boot--starter-common</artifactId>
-            <version>${common-starter.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${starter-common.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
