--- a/common-s3/pom.xml
+++ b/common-s3/pom.xml
@@ -2,28 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
+        <version>3.3.1</version>
         <relativePath/>
     </parent>
 
     <groupId>com.kw</groupId>
     <artifactId>kotlin-spring-boot--starter-common-s3</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>3x-SNAPSHOT</version>
     <name>common-s3</name>
-    <description>Starter S3 Library</description>
+    <description>Common library for AWS S3</description>
 
     <properties>
-        <kotlin.version>1.6.0</kotlin.version>
-        <kotlinx-coroutines.version>1.6.0</kotlinx-coroutines.version>
-        <ktlint-maven-plugin.version>1.12.1</ktlint-maven-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <aws-java-sdk-s3.version>1.12.67</aws-java-sdk-s3.version>
+        <java.version>17</java.version>
+        <aws-java-sdk-s3.version>1.12.760</aws-java-sdk-s3.version>
+        <ktlint-maven-plugin.version>3.2.0</ktlint-maven-plugin.version>
 
-        <common-starter.version>1.2.0-SNAPSHOT</common-starter.version>
+        <starter-common.version>3x-SNAPSHOT</starter-common.version>
     </properties>
 
     <dependencies>
@@ -31,21 +31,7 @@
         <dependency>
             <groupId>com.kw</groupId>
             <artifactId>kotlin-spring-boot--starter-common</artifactId>
-            <version>${common-starter.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- COROUTINE -->
-        <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>${kotlinx-coroutines.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-coroutines-slf4j</artifactId>
-            <version>${kotlinx-coroutines.version}</version>
+            <version>${starter-common.version}</version>
             <scope>provided</scope>
         </dependency>
 
