--- a/common-sftp/pom.xml
+++ b/common-sftp/pom.xml
@@ -8,24 +8,22 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
+        <version>3.3.1</version>
         <relativePath/>
     </parent>
 
     <groupId>com.kw</groupId>
-    <artifactId>kotlin.spring-boot--starter-common-sftp</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <artifactId>kotlin-spring-boot--starter-common-sftp</artifactId>
+    <version>3x-SNAPSHOT</version>
     <name>common-sftp</name>
-    <description>Starter SFTP Library</description>
+    <description>Common library for SFTP</description>
 
     <properties>
-        <kotlin.version>1.6.0</kotlin.version>
-        <kotlinx-coroutines.version>1.6.0</kotlinx-coroutines.version>
-        <ktlint-maven-plugin.version>1.12.1</ktlint-maven-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+        <java.version>17</java.version>
+        <ktlint-maven-plugin.version>3.2.0</ktlint-maven-plugin.version>
         <jsch.version>0.1.55</jsch.version>
 
-        <common-starter.version>1.2.0-SNAPSHOT</common-starter.version>
+        <starter-common.version>3x-SNAPSHOT</starter-common.version>
     </properties>
 
     <dependencies>
@@ -33,21 +31,7 @@
         <dependency>
             <groupId>com.kw</groupId>
             <artifactId>kotlin-spring-boot--starter-common</artifactId>
-            <version>${common-starter.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- COROUTINE -->
-        <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>${kotlinx-coroutines.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-coroutines-slf4j</artifactId>
-            <version>${kotlinx-coroutines.version}</version>
+            <version>${starter-common.version}</version>
             <scope>provided</scope>
         </dependency>
 
